bamboo/02-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: atlassian-bamboo
  name: bamboo
  namespace: atlassian-bamboo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atlassian-bamboo
  template:
    metadata:
      labels:
        app: atlassian-bamboo
    spec:
      containers:
        - name: atlassian-bamboo
          image: atlassian/bamboo-server
          imagePullPolicy: Always
          volumeMounts:
          - name: bamboo-workdir
            mountPath: /var/atlassian/application-data/bamboo
          - name: bamboo-logs
            mountPath: /opt/atlassian/bamboo/logs
          ports:
          - containerPort: 8085
            name: http
            protocol: TCP
          - containerPort: 54663
            name: ssh
            protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 6
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
      volumes:
        - name: bamboo-workdir
          emptyDir: {}
        - name: bamboo-logs
          emptyDir: {}
